# space-invaders

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  main.cpp  run.sh  spaceship.hpp  star_generator.hpp  test_run.sh
test/: CMakeLists.txt  test.cpp
